--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,47 @@
 
 body{
   background-color: white;
+  margin:50px;
 }
 
 header{
   background-image: url("../img/banniere.jpg");
   text-align: center;
-  height: 300px;
+  height: 150px;
+
 }
 
-#menu li{
-  display:inline;
+#menu li {
+  display: inline ;
+  margin-right: 1px ;
+
+}
+
+#menu{
+  background-color: red;
+  text-align: center;
+  margin:0px;
+  padding:0px;
+  line-height: 35px;
+}
+
+a{
+  text-decoration: none;
+  color:white;
+  border-left: 1px solid white;
+}
+
+a:hover{
+  background-color: black;
+}
+#container{
+  display:flex;
+}
+
+#reflex{
+  width: 50px;
+}
+
+h3{
+  font-size: 1.250em
 }
