--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,32 @@
 
+
 body{
-  background-color: white;
+  width: 980px;
   margin:50px;
 }
+
 
 header{
   background-image: url("../img/banniere.jpg");
   text-align: center;
-  height: 150px;
-
+  height: 160  px;
+  align-items: center;
+  justify-content: center;
 }
 
-#menu li {
-  display: inline ;
-  margin-right: 1px ;
+/*nav*/
+nav{
+  height : 22px;
+  box-shadow: 4  px 16px #888888;
+}
 
+a{
+  text-decoration: none;
+  color:white;
+}
+
+a:hover{
+  background-color: black;
 }
 
 #menu{
@@ -23,37 +35,94 @@ header{
   margin:0px;
   padding:0px;
   line-height: 35px;
+  justify-content: space-between;
 }
 
-a{
-  text-decoration: none;
-  color:white;
-  border-left: 1px solid white;
+#menu li {
+  display: inline ;
+  margin-right: 1px ;
+
 }
 
-a:hover{
-  background-color: black;
+
+/*fin de nav*/
+
+
+
+h1{
+  font-size: 3.75em;
 }
-.soustitre1 ::before{
-
-      font-family: "Font Awesome 5 Free";
-      content: "\f030";
-  }
-  }
-
-
-
-
-h3{
-  font-size: 1.250em
+h2{
+  font-size: 1em;
 }
 
-#bloc_photos1{
+
+
+form{
   display: flex;
+  flex-direction: column;
+  width: 300px;
+  padding-left: 50px;
+  opacity:0.5;
+}
 
+iframe{
+  width: 980px;
+}
 
-  }
-.photo{
+p{
+  font-size: 1.000em
+}
+
+footer{
+  background-color: blue;
+  color: white;
+  height: 200px;
+  padding: 20px;
+}
+
+input{
+  border:none;
+}
+
+.images{
+  display: inline-block;
+  background-size: cover;
   width: 150px;
   height: 150px;
+}
+
+
+.text{
+    width: 100px;
+    display: inline-block;
+    margin:25px;
+}
+
+.stitre1{
+    display: flex;
+    flex-direction: row;
+}
+
+.md{
+  font-weight:bold;
+  font-size: 1.125em;
+}
+
+  .terre{
+    width: 480px;
+    height: 380px;
+  }
+
+#container{
+    display:flex;
+  }
+
+#container2
+{
+  display: flex;
+  font-size: 4em;
+  justify-content: space-between;
+  padding-top: 30px;
+
 }
